Fix backface visibility on iOS Safari.

--- a/css/main.css
+++ b/css/main.css
@@ -47,6 +47,7 @@ body {
   border-radius: .5em;
   position: absolute;
   backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
 }
 
 .card .front {
